// SPDX-License-Identifier: BSD-3-Clause

syntax = "proto3";

package schema.v1alpha1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

enum LEDType {
  LED_TYPE_UNSPECIFIED = 0;
  LED_TYPE_POWER = 1;
  LED_TYPE_STATUS = 2;
  LED_TYPE_ERROR = 3;
  LED_TYPE_IDENTIFY = 4;
}

enum LEDState {
  LED_STATE_UNSPECIFIED = 0;
  LED_STATE_OFF = 1;
  LED_STATE_ON = 2;
  LED_STATE_BLINK = 3;
  LED_STATE_FAST_BLINK = 4;
}

message LEDControlRequest {
  string component_name = 1 [ (buf.validate.field).string.min_len = 1 ];
  LEDType led_type = 2 [ (buf.validate.field).enum.defined_only = true ];
  LEDState led_state = 3 [ (buf.validate.field).enum.defined_only = true ];
  optional uint32 brightness = 4 [ (buf.validate.field).uint32.lte = 100 ];
  optional uint32 blink_interval_ms = 5 [
    (buf.validate.field).uint32.gte = 100,
    (buf.validate.field).uint32.lte = 10000
  ];
}

message LEDControlResponse {
  LEDState current_state = 1 [ (buf.validate.field).enum.defined_only = true ];
  string message = 2;
  bool success = 3;
}

message LEDStatusRequest {
  string component_name = 1 [ (buf.validate.field).string.min_len = 1 ];
  LEDType led_type = 2 [ (buf.validate.field).enum.defined_only = true ];
}

message LEDStatusResponse {
  LEDState current_state = 1 [ (buf.validate.field).enum.defined_only = true ];
  optional uint32 brightness = 2 [ (buf.validate.field).uint32.lte = 100 ];
  bool is_blinking = 3;
  uint32 blink_interval_ms = 4 [
    (buf.validate.field).uint32.gte = 100,
    (buf.validate.field).uint32.lte = 10000
  ];
  bool controllable = 5;
  optional string hardware_info = 6;
}

message PowerOperationResult {
  string component_name = 1 [ (buf.validate.field).string.min_len = 1 ];
  string operation = 2 [ (buf.validate.field).string.min_len = 1 ];
  bool success = 3;
  string error_message = 4;
  google.protobuf.Timestamp completed_at = 5
      [ (buf.validate.field).required = true ];
  uint32 duration_ms = 6;
  optional string previous_state = 7;
  optional string current_state = 8;
}

message StateTransitionNotification {
  string component_name = 1 [ (buf.validate.field).string.min_len = 1 ];
  string component_type = 2 [ (buf.validate.field).string.min_len = 1 ];
  string previous_state = 3 [ (buf.validate.field).string.min_len = 1 ];
  string current_state = 4 [ (buf.validate.field).string.min_len = 1 ];
  string trigger = 5 [ (buf.validate.field).string.min_len = 1 ];
  bool success = 6;
  google.protobuf.Timestamp changed_at = 7
      [ (buf.validate.field).required = true ];
  uint32 transition_duration_ms = 8;
  optional string context = 9;
}

message PowerControlRequest {
  string component_name = 1 [ (buf.validate.field).string.min_len = 1 ];
  string action = 2 [ (buf.validate.field).string.min_len = 1 ];
  optional uint32 timeout_ms = 3 [
    (buf.validate.field).uint32.gte = 1000,
    (buf.validate.field).uint32.lte = 300000
  ];
  optional bool force = 4;
  optional string request_id = 5;
}

message PowerControlResponse {
  bool accepted = 1;
  string message = 2;
  optional string current_state = 3;
  optional google.protobuf.Timestamp estimated_completion = 4;
  optional string request_id = 5;
}
